highlight/tree-sitter/test/corpus/written-conversions.txt
==================
Written types and existing literal prefixes
==================
public main: () -> (code: i32) =
    bytes: []u8 = []u8(text)
    extracted: [2]i32 = [2]i32(hidden_array)
    pointer: ptr mut i32 = ptr mut i32(hidden_pointer)
    view: []ptr i32 = []ptr i32(hidden_view)
    callback: (x: i32) -> (y: i32) = (x: i32) -> (y: i32)(hidden_callback)
    fallible: (x: i32) -> (y: i32) ! failed = (x: i32) -> (y: i32) ! failed(hidden_fallible)
    concrete: tag(u32, 7) = tag(u32, 7)(source)
    values: [2]i32 = [4, 5]
    repeated: [2]i32 = [2 of 4]
    empty: []i32 = []
    contextual: ptr i32 = ptr(address)
    erased: any readable = any(pointer)
    unwrapped: any readable = any readable(hidden_erased)
    code = 42
end main

---

(source_file
  (public_declaration
    (function_declaration
      (identifier)
      (declared_signature
        (arrow)
        (returns
          (named_return
            (identifier_list
              (identifier))
            (scalar_type))))
      (block
        (binding
          (identifier_list
            (identifier))
          (slice_type
            (scalar_type))
          (logical_or_expression
            (logical_and_expression
              (comparison_expression
                (alternation_expression
                  (exclusion_expression
                    (conjunction_expression
                      (shift_expression
                        (sum_expression
                          (product_expression
                            (unary_expression
                              (written_conversion
                                (slice_type
                                  (scalar_type))
                                (logical_or_expression
                                  (logical_and_expression
                                    (comparison_expression
                                      (alternation_expression
                                        (exclusion_expression
                                          (conjunction_expression
                                            (shift_expression
                                              (sum_expression
                                                (product_expression
                                                  (unary_expression
                                                    (indexed_expression
                                                      (identifier))))))))))))))))))))))))
        (binding
          (identifier_list
            (identifier))
          (array_type
            (logical_or_expression
              (logical_and_expression
                (comparison_expression
                  (alternation_expression
                    (exclusion_expression
                      (conjunction_expression
                        (shift_expression
                          (sum_expression
                            (product_expression
                              (unary_expression
                                (literal
                                  (integer_literal))))))))))))
            (scalar_type))
          (logical_or_expression
            (logical_and_expression
              (comparison_expression
                (alternation_expression
                  (exclusion_expression
                    (conjunction_expression
                      (shift_expression
                        (sum_expression
                          (product_expression
                            (unary_expression
                              (written_conversion
                                (array_type
                                  (logical_or_expression
                                    (logical_and_expression
                                      (comparison_expression
                                        (alternation_expression
                                          (exclusion_expression
                                            (conjunction_expression
                                              (shift_expression
                                                (sum_expression
                                                  (product_expression
                                                    (unary_expression
                                                      (literal
                                                        (integer_literal))))))))))))
                                  (scalar_type))
                                (logical_or_expression
                                  (logical_and_expression
                                    (comparison_expression
                                      (alternation_expression
                                        (exclusion_expression
                                          (conjunction_expression
                                            (shift_expression
                                              (sum_expression
                                                (product_expression
                                                  (unary_expression
                                                    (indexed_expression
                                                      (identifier))))))))))))))))))))))))
        (binding
          (identifier_list
            (identifier))
          (pointer_type
            (scalar_type))
          (logical_or_expression
            (logical_and_expression
              (comparison_expression
                (alternation_expression
                  (exclusion_expression
                    (conjunction_expression
                      (shift_expression
                        (sum_expression
                          (product_expression
                            (unary_expression
                              (written_conversion
                                (pointer_type
                                  (scalar_type))
                                (logical_or_expression
                                  (logical_and_expression
                                    (comparison_expression
                                      (alternation_expression
                                        (exclusion_expression
                                          (conjunction_expression
                                            (shift_expression
                                              (sum_expression
                                                (product_expression
                                                  (unary_expression
                                                    (indexed_expression
                                                      (identifier))))))))))))))))))))))))
        (binding
          (identifier_list
            (identifier))
          (slice_type
            (pointer_type
              (scalar_type)))
          (logical_or_expression
            (logical_and_expression
              (comparison_expression
                (alternation_expression
                  (exclusion_expression
                    (conjunction_expression
                      (shift_expression
                        (sum_expression
                          (product_expression
                            (unary_expression
                              (written_conversion
                                (slice_type
                                  (pointer_type
                                    (scalar_type)))
                                (logical_or_expression
                                  (logical_and_expression
                                    (comparison_expression
                                      (alternation_expression
                                        (exclusion_expression
                                          (conjunction_expression
                                            (shift_expression
                                              (sum_expression
                                                (product_expression
                                                  (unary_expression
                                                    (indexed_expression
                                                      (identifier))))))))))))))))))))))))
        (binding
          (identifier_list
            (identifier))
          (function_type
            (signature
              (parameters
                (parameter
                  (identifier_list
                    (identifier))
                  (scalar_type)))
              (arrow)
              (returns
                (named_return
                  (identifier_list
                    (identifier))
                  (scalar_type)))))
          (logical_or_expression
            (logical_and_expression
              (comparison_expression
                (alternation_expression
                  (exclusion_expression
                    (conjunction_expression
                      (shift_expression
                        (sum_expression
                          (product_expression
                            (unary_expression
                              (written_conversion
                                (function_type
                                  (signature
                                    (parameters
                                      (parameter
                                        (identifier_list
                                          (identifier))
                                        (scalar_type)))
                                    (arrow)
                                    (returns
                                      (named_return
                                        (identifier_list
                                          (identifier))
                                        (scalar_type)))))
                                (logical_or_expression
                                  (logical_and_expression
                                    (comparison_expression
                                      (alternation_expression
                                        (exclusion_expression
                                          (conjunction_expression
                                            (shift_expression
                                              (sum_expression
                                                (product_expression
                                                  (unary_expression
                                                    (indexed_expression
                                                      (identifier))))))))))))))))))))))))
        (binding
          (identifier_list
            (identifier))
          (function_type
            (signature
              (parameters
                (parameter
                  (identifier_list
                    (identifier))
                  (scalar_type)))
              (arrow)
              (returns
                (named_return
                  (identifier_list
                    (identifier))
                  (scalar_type)))
              (errors
                (declaration_reference
                  (identifier)))))
          (logical_or_expression
            (logical_and_expression
              (comparison_expression
                (alternation_expression
                  (exclusion_expression
                    (conjunction_expression
                      (shift_expression
                        (sum_expression
                          (product_expression
                            (unary_expression
                              (written_conversion
                                (function_type
                                  (signature
                                    (parameters
                                      (parameter
                                        (identifier_list
                                          (identifier))
                                        (scalar_type)))
                                    (arrow)
                                    (returns
                                      (named_return
                                        (identifier_list
                                          (identifier))
                                        (scalar_type)))
                                    (errors
                                      (declaration_reference
                                        (identifier)))))
                                (logical_or_expression
                                  (logical_and_expression
                                    (comparison_expression
                                      (alternation_expression
                                        (exclusion_expression
                                          (conjunction_expression
                                            (shift_expression
                                              (sum_expression
                                                (product_expression
                                                  (unary_expression
                                                    (indexed_expression
                                                      (identifier))))))))))))))))))))))))
        (binding
          (identifier_list
            (identifier))
          (type_application
            (declaration_reference
              (identifier))
            (type_argument
              (scalar_type))
            (type_argument
              (integer_literal)))
          (logical_or_expression
            (logical_and_expression
              (comparison_expression
                (alternation_expression
                  (exclusion_expression
                    (conjunction_expression
                      (shift_expression
                        (sum_expression
                          (product_expression
                            (unary_expression
                              (written_conversion
                                (type_application
                                  (declaration_reference
                                    (identifier))
                                  (type_argument
                                    (scalar_type))
                                  (type_argument
                                    (integer_literal)))
                                (logical_or_expression
                                  (logical_and_expression
                                    (comparison_expression
                                      (alternation_expression
                                        (exclusion_expression
                                          (conjunction_expression
                                            (shift_expression
                                              (sum_expression
                                                (product_expression
                                                  (unary_expression
                                                    (indexed_expression
                                                      (identifier))))))))))))))))))))))))
        (binding
          (identifier_list
            (identifier))
          (array_type
            (logical_or_expression
              (logical_and_expression
                (comparison_expression
                  (alternation_expression
                    (exclusion_expression
                      (conjunction_expression
                        (shift_expression
                          (sum_expression
                            (product_expression
                              (unary_expression
                                (literal
                                  (integer_literal))))))))))))
            (scalar_type))
          (logical_or_expression
            (logical_and_expression
              (comparison_expression
                (alternation_expression
                  (exclusion_expression
                    (conjunction_expression
                      (shift_expression
                        (sum_expression
                          (product_expression
                            (unary_expression
                              (array_literal
                                (logical_or_expression
                                  (logical_and_expression
                                    (comparison_expression
                                      (alternation_expression
                                        (exclusion_expression
                                          (conjunction_expression
                                            (shift_expression
                                              (sum_expression
                                                (product_expression
                                                  (unary_expression
                                                    (literal
                                                      (integer_literal))))))))))))
                                (logical_or_expression
                                  (logical_and_expression
                                    (comparison_expression
                                      (alternation_expression
                                        (exclusion_expression
                                          (conjunction_expression
                                            (shift_expression
                                              (sum_expression
                                                (product_expression
                                                  (unary_expression
                                                    (literal
                                                      (integer_literal))))))))))))))))))))))))
        (binding
          (identifier_list
            (identifier))
          (array_type
            (logical_or_expression
              (logical_and_expression
                (comparison_expression
                  (alternation_expression
                    (exclusion_expression
                      (conjunction_expression
                        (shift_expression
                          (sum_expression
                            (product_expression
                              (unary_expression
                                (literal
                                  (integer_literal))))))))))))
            (scalar_type))
          (logical_or_expression
            (logical_and_expression
              (comparison_expression
                (alternation_expression
                  (exclusion_expression
                    (conjunction_expression
                      (shift_expression
                        (sum_expression
                          (product_expression
                            (unary_expression
                              (array_repetition
                                (integer_literal)
                                (of_keyword
                                  (identifier))
                                (logical_or_expression
                                  (logical_and_expression
                                    (comparison_expression
                                      (alternation_expression
                                        (exclusion_expression
                                          (conjunction_expression
                                            (shift_expression
                                              (sum_expression
                                                (product_expression
                                                  (unary_expression
                                                    (literal
                                                      (integer_literal))))))))))))))))))))))))
        (binding
          (identifier_list
            (identifier))
          (slice_type
            (scalar_type))
          (logical_or_expression
            (logical_and_expression
              (comparison_expression
                (alternation_expression
                  (exclusion_expression
                    (conjunction_expression
                      (shift_expression
                        (sum_expression
                          (product_expression
                            (unary_expression
                              (empty_slice))))))))))))
        (binding
          (identifier_list
            (identifier))
          (pointer_type
            (scalar_type))
          (logical_or_expression
            (logical_and_expression
              (comparison_expression
                (alternation_expression
                  (exclusion_expression
                    (conjunction_expression
                      (shift_expression
                        (sum_expression
                          (product_expression
                            (unary_expression
                              (pointer_conversion
                                (logical_or_expression
                                  (logical_and_expression
                                    (comparison_expression
                                      (alternation_expression
                                        (exclusion_expression
                                          (conjunction_expression
                                            (shift_expression
                                              (sum_expression
                                                (product_expression
                                                  (unary_expression
                                                    (indexed_expression
                                                      (identifier))))))))))))))))))))))))
        (binding
          (identifier_list
            (identifier))
          (any_type
            (declaration_reference
              (identifier)))
          (logical_or_expression
            (logical_and_expression
              (comparison_expression
                (alternation_expression
                  (exclusion_expression
                    (conjunction_expression
                      (shift_expression
                        (sum_expression
                          (product_expression
                            (unary_expression
                              (any_construction
                                (logical_or_expression
                                  (logical_and_expression
                                    (comparison_expression
                                      (alternation_expression
                                        (exclusion_expression
                                          (conjunction_expression
                                            (shift_expression
                                              (sum_expression
                                                (product_expression
                                                  (unary_expression
                                                    (indexed_expression
                                                      (identifier))))))))))))))))))))))))
        (binding
          (identifier_list
            (identifier))
          (any_type
            (declaration_reference
              (identifier)))
          (logical_or_expression
            (logical_and_expression
              (comparison_expression
                (alternation_expression
                  (exclusion_expression
                    (conjunction_expression
                      (shift_expression
                        (sum_expression
                          (product_expression
                            (unary_expression
                              (written_conversion
                                (any_type
                                  (declaration_reference
                                    (identifier)))
                                (logical_or_expression
                                  (logical_and_expression
                                    (comparison_expression
                                      (alternation_expression
                                        (exclusion_expression
                                          (conjunction_expression
                                            (shift_expression
                                              (sum_expression
                                                (product_expression
                                                  (unary_expression
                                                    (indexed_expression
                                                      (identifier))))))))))))))))))))))))
        (assignment_statement
          (place
            (indexed_expression
              (identifier)))
          (logical_or_expression
            (logical_and_expression
              (comparison_expression
                (alternation_expression
                  (exclusion_expression
                    (conjunction_expression
                      (shift_expression
                        (sum_expression
                          (product_expression
                            (unary_expression
                              (literal
                                (integer_literal))))))))))))))
      (identifier))))
